[package]
name = "ad_platform-monolyth"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ad_platform-monolyth"
path = "./src/bin/main.rs"

[[bin]]
name = "ad_platform-openapi"
path = "./src/bin/openapi.rs"

[dependencies]
kernel = { path = "../../kernel" }
infrastructure-instrumentation-opentelemetry = { path = "../../infrastructure/instrumentation/opentelemetry" }
infrastructure-persistence-postgres = { path = "../../infrastructure/persistence/postgres" }
infrastructure-service-token-jwt = { path = "../../infrastructure/service/token/jwt" }
presentation-api-rest = { path = "../../presentation/api/rest" }

async-trait.workspace = true
env-vars-config.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower.workspace = true
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true

tracing-subscriber = "0.3"

axum-prometheus = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = { workspace = true, features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }

[lints]
workspace = true

