[package]
name = "lib-infrastructure-persistence"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[features]
postgres = ["dep:postgres"]

[dependencies]
postgres = { path = "./postgres", package = "lib-infrastructure-persistence-postgres", optional = true }


[lints]
workspace = true
