[package]
name = "ad_platform-infrastructure-persistence-postgres"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
lib = { workspace = true, features = ["infrastructure_persistence_postgres"] }
domain = { path = "../../../domain", package = "ad_platform-domain" }
application = { path = "../../../application", package = "ad_platform-application" }

async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "uuid"] }

[lints]
workspace = true
