[package]
name = "template_example-infrastructure-persistence-postgres"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
lib = { workspace = true, features = ["infrastructure-persistence-postgres"] }
domain = { path = "../../../domain", package = "template_example-domain" }
application = { path = "../../../application", package = "template_example-application" }

async-trait.workspace = true
derive-where.workspace = true
mobc-sqlx = { workspace = true, features = ["postgres", "uuid"] }
model-mapper.workspace = true
tap.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid"] }

[lints]
workspace = true
