[package]
name = "template_example-infrastructure-persistence-postgres"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
lib = { workspace = true, features = ["infrastructure-persistence-sqlx"] }
domain = { path = "../../../domain", package = "template_example-domain" }
application = { path = "../../../application", package = "template_example-application" }

derive-where.workspace = true
entrait.workspace = true
model-mapper.workspace = true
thiserror.workspace = true
tracing.workspace = true

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid"] }

[lints]
workspace = true
