[package]
name = "template_example-infrastructure-persistence-redis"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
lib = { workspace = true, features = ["infrastructure-persistence-redis"] }
domain = { path = "../../../domain", package = "template_example-domain" }
application = { path = "../../../application", package = "template_example-application" }

anyhow.workspace = true
derive-where.workspace = true
mobc-redis.workspace = true
thiserror.workspace = true
tracing.workspace = true

redis = { version = "1.0", features = ["json", "uuid"] }


[lints]
workspace = true
